terraform/deployments/cluster-prod/security-groups.tf
resource "aws_security_group" "snyk_security_group_one" {
  description = "Security group for worker group one"
  name_prefix = "snyk_security_group_one"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [
      "10.0.0.0/8",
    ]
  }
}

resource "aws_security_group" "snyk_security_group_two" {
  description = "Security group for worker group two"
  name_prefix = "snyk_security_group_two"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [
      "192.168.0.0/16",
    ]
  }
}

resource "aws_security_group" "snyk_security_group_all" {
  description = "Security group for all worker groups"
  name_prefix = "snyk_security_group_all"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [
      "10.0.0.0/8",
      "172.16.0.0/12",
      "192.168.0.0/16",
    ]
  }
}
